--- a/doc/presentations/variability_and_transformations.bib
+++ b/doc/presentations/variability_and_transformations.bib
@@ -41,4 +41,12 @@
   booktitle={In Workshop on Managing Variability for Software Product Lines},
   year={2007},
   organization={Citeseer}
+},
+
+@book{czarnecki2000generative,
+  title={Generative programming: methods, tools, and applications},
+  author={Czarnecki, Krzysztof and Eisenecker, Ulrich W and Czarnecki, Krysztof},
+  volume={16},
+  year={2000},
+  publisher={Addison Wesley Reading}
 }
