--- a/doc/presentations/variability_and_transformations.tex
+++ b/doc/presentations/variability_and_transformations.tex
@@ -34,7 +34,7 @@
 
 \titlepage{}
 
-% v${DOGEN_VERSION} % chktex-file 25
+v${DOGEN_VERSION} % chktex-file 25
 
 \end{frame}
 
@@ -57,16 +57,16 @@
 
 \pause{}
 
-\item \ac{MDE} ``goes beyond the pure development activities and
-  encompasses other model-based tasks of a complete software
-  engineering process (\eg the model-based evolution of the system or
+\item \ac{MDE} \enquote{goes beyond the pure development activities
+  and encompasses other model-based tasks of a complete software
+  engineering process (\eg{} the model-based evolution of the system or
   the model-driven reverse engineering of a legacy
-  system.)''\cite{brambilla2012model}
+  system.)}\cite{brambilla2012model}
 
-\pause
+\pause{}
 
-\item ``Fundamental'' \ac{MDE} equation: Models + Transformations =
-  Software
+\item \enquote{Fundamental} \ac{MDE} equation: Software = Models +
+  Transformations
 
 \end{itemize}
 
@@ -81,19 +81,19 @@
   which are described according to a \textbf{formal language} and thus
   have precise semantics.
 
-\pause
+\pause{}
 
 \item Formal models are written using a \acf{DSL}. The \ac{DSL} is
   designed specifically for modeling.
 
-\pause
+\pause{}
 
 \item \acf{UML} is an example of such a \ac{DSL} (\emph{when suitably
   extended with stereotypes and profiles}). \ac{UML} has a graphical
   representation~--- called a \emph{concrete syntax}~--- but it also
   has an \emph{abstract syntax}.
 
-\pause
+\pause{}
 
 \item A \emph{meta-model} is made up of the abstract syntax and the
   static semantics of the \ac{DSL}. The metamodel is the basis for
@@ -110,12 +110,12 @@
 \item \emph{Transformations}~--- or just transforms~--- can be thought
   of as functions that take models as inputs and produce an output.
 
-\pause
+\pause{}
 
 \item We can classify transforms based on the \emph{type} of its
   output:
 
-\pause
+\pause{}
 
 \begin{itemize}
 
@@ -123,14 +123,14 @@
   output can \emph{conform} to the same metamodel or to a different
   metamodel.
 
-\pause
+\pause{}
 
 \item \textbf{\acf{M2T}}: the output is a textual representation of
   the model.
 
 \end{itemize}
 
-\pause
+\pause{}
 
 \item \ac{M2T} transforms are commonly referred to as
   \emph{generators} because they generalise of the notion of a
@@ -147,23 +147,23 @@
 
 \begin{itemize}
 
-\item \ac{MDE} ``pursues the goal of creating a software
+\item \ac{MDE} \enquote{pursues the goal of creating a software
   \emph{product} in part or in the whole through one or more
-  transformations.''\cite{volter2013model}
+  transformations.}\cite{volter2013model}
 
-\pause
+\pause{}
 
 \item Once you have a product, the next logical think is to think of
-  \emph{product families}: ``the set of all products that can be
-  created with a certain domain architecture is commonly referred to
-  as a \emph{software system family}.''\cite{volter2013model}
+  \emph{product families}: \enquote{the set of all products that can
+    be created with a certain domain architecture is commonly referred
+    to as a \emph{software system family}.}\cite{volter2013model}
 
-\pause
+\pause{}
 
-\item ``Software product line engineering aims to reduce development
-  time, effort, cost, and complexity by taking advantage of the
-  commonality within a portfolio of similar
-  products.''\cite{voelter2007handling}
+\item \enquote{Software product line engineering aims to reduce
+  development time, effort, cost, and complexity by taking advantage
+  of the commonality within a portfolio of similar
+  products.}\cite{voelter2007handling}
 
 \end{itemize}
 
@@ -174,24 +174,24 @@
 
 \begin{itemize}
 
-\item ``The main idea of software product lines is to design a family
-  of systems instead of one single system. A family of systems defines
-  a set of systems that share substantial commonalities but also
-  exhibit explicit variations.''\cite{brambilla2012model}
+\item \enquote{The main idea of software product lines is to design a
+  family of systems instead of one single system. A family of systems
+  defines a set of systems that share substantial commonalities but
+  also exhibit explicit variations.}\cite{brambilla2012model}
 
-\pause
+\pause{}
 
 \item In theory, \acf{PLE} integrates well with \ac{MDE}: it provides
   an analytical framework with which to model the domain looking for
   variations.
 
-\pause
+\pause{}
 
-\item If all went according to plan, we should be able to ``simply''
-  supply additional inputs to our models; these then determine the
-  \emph{concrete} product we want to produce from the universe of
-  \emph{possible} products supported by our models. The key here is
-  \emph{variability} and how to express it.
+\item If all went according to plan, we should be able to
+  \enquote{simply} supply additional inputs to our models; these then
+  determine the \emph{concrete} product we want to produce from the
+  universe of \emph{possible} products supported by our models. The
+  key here is \emph{variability} and how to express it.
 
 \end{itemize}
 
@@ -204,17 +204,17 @@
 
 \begin{itemize}
 
-\item ``Variability management is the activity concerned with
+\item \enquote{Variability management is the activity concerned with
   identifying, designing, implementing, and tracing flexibility in
-  software product lines (SPLs).''\cite{voelter2007handling}
+  software product lines (SPLs).}\cite{voelter2007handling}
 
-\pause
+\pause{}
 
-\item ``The effectiveness of a software product line approach directly
-  depends on how well feature variability within the portfolio is
-  implemented and managed throughout the development lifecycle, from
-  early analysis through maintenance and
-  evolution.''\cite{groher2007expressing}
+\item \enquote{The effectiveness of a software product line approach
+  directly depends on how well feature variability within the
+  portfolio is implemented and managed throughout the development
+  lifecycle, from early analysis through maintenance and
+  evolution.}\cite{groher2007expressing}
 
 \end{itemize}
 
@@ -244,7 +244,7 @@ quite often lacking variability as a first-class language concept
 \item Thus far, Software Engineers have handled variability using the
   available tools:
 
-  \pause
+\pause{}
 
   \begin{itemize}
 
@@ -252,19 +252,19 @@ quite often lacking variability as a first-class language concept
     frameworks, polymorphism, reflection, pre-compilers,
     pre-processors.
 
-    \pause
+    \pause{}
 
   \item configuration and build tools to set compile time variables
     and select variants of assets.
 
   \end{itemize}
 
-  \pause
+  \pause{}
 
 \item These approaches are limited because they are at the wrong level
   of abstraction: the code.
 
-\pause
+\pause{}
 
 \item In the context of \ac{MDE} and \ac{SPL} we want to make the most
   of variability as a first class citizen.
@@ -297,18 +297,18 @@ Model\cite{czarnecki2000generative}:
   to define the features and their relationships; the language was
   defined specifically to have the vocabulary to do so. But\ldots
 
-  \pause
+  \pause{}
 
 \item \ldots as JWZ famously said: \enquote{Some people, when
   confronted with a problem, think \enquote{I know, I'll use regular
     expressions.} Now they have two problems.}
 
-  \pause
+  \pause{}
 
 \item The question then is: how do we integrate the traditional
   \ac{MDE} modeling techniques~--- based on modeling \ac{DSL}s~---
   with the modeling of variability? Groher and V{\"o}lter propose a
-  solution to this ``two-model'' problem in their papers.
+  solution to this \enquote{two-model} problem in their papers.
 
 \end{itemize}
 
@@ -321,19 +321,19 @@ First we need to understand more about the nature of variability. The
 trouble is, variability is \emph{pervasive}; it exists at all levels
 of \ac{MDE}, from analysis, to problem space, to solution space:
 
-\pause
+\pause{}
 
 \begin{itemize}
 \item Variability impacts \emph{all} the models we create: some
   model elements may be added or removed depending how we choose to
   instantiate the product;
 
-  \pause
+  \pause{}
 
 \item Variability impacts \ac{M2M} transforms: they may require
   parameters expressing user choices in order to execute;
 
-  \pause
+  \pause{}
 
 \item Variability impacts \ac{M2T} transforms: some code may or may
   not be generated in response to user choices.
@@ -350,20 +350,20 @@ of \ac{MDE}, from analysis, to problem space, to solution space:
 \item Groher and V{\"o}lter classify variability into two broad
   types\cite{groher2007expressing}:
 
-\pause
+\pause{}
 
 \begin{itemize}
 \item \textbf{Structural}: described using creative construction DSLs,
-  \eg \ac{UML}. These allow one to creatively construct any arbitrary
+  \eg{} \ac{UML}. These allow one to creatively construct any arbitrary
   data structure, defining any number of models.
 
-\pause
+\pause{}
 
 \item \textbf{Non-structural}: described using configuration
-  languages, \eg application config files, build system configuration,
-  macros, \etc
+  languages, \eg{} application config files, build system configuration,
+  macros, \etc{}
 
-\pause
+\pause{}
 
 \end{itemize}
 
@@ -377,8 +377,9 @@ of \ac{MDE}, from analysis, to problem space, to solution space:
 \frametitle{Variability Classification}
 
 In practice, variability does not fit neatly into these
-categories. Instead, there is a ``spectrum of languages commonly used
-for expressing and binding variability.''\cite{groher2007expressing}
+categories. Instead, there is a \enquote{spectrum of languages
+  commonly used for expressing and binding
+  variability.}\cite{groher2007expressing}
 
 \begin{figure}
   \centering
@@ -394,22 +395,22 @@ for expressing and binding variability.''\cite{groher2007expressing}
 Now we have enough context, we can focus on the overall approach. It
 can be summarised as follows:
 
-\pause
+\pause{}
 
 \begin{itemize}
 
-\item ``[Use] models to describe product lines. Variants are defined
-  on [sic] model-level.  Transformations generate running
+\item \enquote{[Use] models to describe product lines. Variants are
+  defined on [sic] model-level.  Transformations generate running
   applications. \acf{AO} techniques are used to help define the
   variants in the models as well as in the transformers and
-  generators.''\cite{voelter2007handling}
+  generators.}\cite{voelter2007handling}
 
-  \pause
+  \pause{}
 
-\item ``The core idea is to express variability in models and
+\item \enquote{The core idea is to express variability in models and
   generators, since, due to the higher abstraction level in models
   [\ldots], the number of variation points is
-  lower[\ldots].''\cite{voelter2007handling}
+  lower[\ldots].}\cite{voelter2007handling}
 
 \end{itemize}
 
@@ -434,17 +435,17 @@ We can see this visually:
 
 \begin{itemize}
 
-\item Groher and V{\"o}lter was to ``divide and conquer''. They split
-  variability into two types, from an implementation perspective:
-  \emph{Positive Variability} and \emph{Negative Variability}. Details
-  on next slide.
+\item Groher and V{\"o}lter was to \enquote{divide and conquer}. They
+  split variability into two types, from an implementation
+  perspective: \emph{Positive Variability} and \emph{Negative
+    Variability}. Details on next slide.
 
-  \pause
+  \pause{}
 
 \item For each variability type they created specific tooling. They
   extended an existing modeling toolchain with these additional tools.
 
-  \pause
+  \pause{}
 
   \item They had to create changes at all levels: from feature
     modeling, to transformation workflows, to the generator templates.
@@ -456,12 +457,12 @@ We can see this visually:
 \begin{frame}
 \frametitle{Positive Variability}
 
-``[S]tarts with a minimal core and selectively adds additional parts
-based on the presence or absence of features in the configuration
-models.''\cite{groher2007expressing} In this case we need to
-\emph{weave} in other models in response to user choices.
+\enquote{[S]tarts with a minimal core and selectively adds additional
+  parts based on the presence or absence of features in the
+  configuration models.}\cite{groher2007expressing} In this case we
+need to \emph{weave} in other models in response to user choices.
 
-\pause
+\pause{}
 
 \begin{figure}
   \centering
@@ -474,12 +475,13 @@ models.''\cite{groher2007expressing} In this case we need to
 \begin{frame}
 \frametitle{Negative Variability}
 
-``Negative variability selectively takes away parts of a creative
-construction model based on the presence or absence of features in the
-configuration models.''\cite{groher2007expressing} In this case we
-need to remove model elements in response to user choices.
+\enquote{Negative variability selectively takes away parts of a
+  creative construction model based on the presence or absence of
+  features in the configuration models.}\cite{groher2007expressing} In
+this case we need to remove model elements in response to user
+choices.
 
-\pause
+\pause{}
 
 \begin{figure}
   \centering
@@ -528,7 +530,7 @@ need to remove model elements in response to user choices.
 \begin{frame}
 \frametitle{Bibliography}
 
-\printbibliography
+\printbibliography{}
 
 \end{frame}
 
