--- a/doc/presentations/variability_and_transformations.bib
+++ b/doc/presentations/variability_and_transformations.bib
@@ -1,6 +1,6 @@
 @inproceedings{voelter2007handling,
   title={Handling variability in model transformations and generators},
-  author={Voelter, Markus and Groher, Iris},
+  author={V{\"o}lter, Markus and Groher, Iris},
   booktitle={7th OOPSLA Workshop on Domain-Specific Modeling},
   year={2007}
 },
