--- a/doc/agile/v1/sprint_backlog_08.org
+++ b/doc/agile/v1/sprint_backlog_08.org
@@ -14,22 +14,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-03-06 Tue 14:58]
+#+CAPTION: Clock summary at [2018-03-21 Wed 10:13]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *26:03* |       |       | 100.0 |
+| *Total time*                                                                | *28:07* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 26:03   |       |       | 100.0 |
-| Active                                                                      |         | 26:03 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  4:55 |  18.9 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:11 |   0.7 |
-| COMPLETED Write a blog post on previous sprint                              |         |       |  3:35 |  13.8 |
-| COMPLETED Update Readme with links to blog posts                            |         |       |  0:10 |   0.6 |
-| COMPLETED Rename stereotypes                                                |         |       |  0:35 |   2.2 |
-| COMPLETED Dogen does not generate ODB targets for primitives                |         |       |  0:36 |   2.3 |
-| STARTED Create the =generation= model                                       |         |       |  2:49 |  10.8 |
-| STARTED Create a presentation on variability                                |         |       | 13:12 |  50.7 |
+| Stories                                                                     | 28:07   |       |       |   0.0 |
+| Active                                                                      |         | 28:07 |       |   0.0 |
+| Edit release notes for previous sprint                                      |         |       |  4:55 |   0.0 |
+| Sprint and product backlog grooming                                         |         |       |  0:11 |   0.0 |
+| Write a blog post on previous sprint                                        |         |       |  3:35 |   0.0 |
+| Update Readme with links to blog posts                                      |         |       |  0:10 |   0.0 |
+| Rename stereotypes                                                          |         |       |  0:35 |   0.0 |
+| Dogen does not generate ODB targets for primitives                          |         |       |  0:36 |   0.0 |
+| Create a presentation on variability                                        |         |       | 15:16 |   0.0 |
+| Create the =generation= model                                               |         |       |  2:49 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -119,6 +119,16 @@ At present the northwind model does not have any targets to generate
 primitives, causing the northwind model build to fail when ODB is
 enabled.
 
+*** COMPLETED Create a presentation on variability                    :story:
+    CLOSED: [2018-03-21 Wed 10:09]
+    CLOCK: [2018-03-06 Tue 14:58]--[2018-03-06 Tue 17:02] =>  2:04
+    CLOCK: [2018-03-06 Tue 12:30]--[2018-03-06 Tue 14:57] =>  2:27
+    CLOCK: [2018-03-06 Tue 09:05]--[2018-03-06 Tue 12:10] =>  3:05
+    CLOCK: [2018-03-05 Mon 12:05]--[2018-03-05 Mon 16:50] =>  4:45
+    CLOCK: [2018-03-02 Fri 09:11]--[2018-03-02 Fri 12:06] =>  2:55
+
+We need to do a presentation on how variability is linked to MDE.
+
 *** STARTED Create the =generation= model                             :story:
     CLOCK: [2018-01-05 Fri 15:48]--[2018-01-05 Fri 16:01] =>  0:13
     CLOCK: [2018-01-05 Fri 15:44]--[2018-01-05 Fri 15:47] =>  0:03
@@ -171,15 +181,6 @@ Problems:
   class =opaque_properties= and then have a container of these in
   element. However, to make it properly extensible, the only way is to
   make it a unordered set of pointers.
-
-*** STARTED Create a presentation on variability                      :story:
-    CLOCK: [2018-03-06 Tue 14:58]
-    CLOCK: [2018-03-06 Tue 12:30]--[2018-03-06 Tue 14:57] =>  2:27
-    CLOCK: [2018-03-06 Tue 09:05]--[2018-03-06 Tue 12:10] =>  3:05
-    CLOCK: [2018-03-05 Mon 12:05]--[2018-03-05 Mon 16:50] =>  4:45
-    CLOCK: [2018-03-02 Fri 09:11]--[2018-03-02 Fri 12:06] =>  2:55
-
-We need to do a presentation on how variability is linked to MDE.
 
 *** Propagate =fluent= stereotype                                     :story:
 
